<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo_android"
    tools:context=".Login">

    <Button
        android:id="@+id/btn_registrarse"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="96dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:onClick="Registrarse"
        android:text="@string/registrarse"
        android:textColor="#6FC7FA"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:strokeColor="#6FC7FA" />

    <LinearLayout
        android:layout_width="142dp"
        android:layout_height="64dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="59dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout11">

        <Button
            android:id="@+id/btn_login"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="135dp"
            android:layout_height="60dp"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/aceptar"
            android:textColor="#6FC7FA"
            app:strokeColor="#6FC7FA" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout12"
        android:layout_width="351dp"
        android:layout_height="59dp"
        android:layout_marginStart="38dp"
        android:layout_marginTop="214dp"
        android:layout_marginEnd="38dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView_usuario"
            android:layout_width="115dp"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/usuario_login"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/usuario_registro"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:autofillHints=""
            android:ems="10"
            android:fontFamily="sans-serif-condensed-medium"
            android:hint="@string/nombre_usuario"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColorHint="#1976D2"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout11"
        android:layout_width="352dp"
        android:layout_height="71dp"
        android:layout_marginStart="38dp"
        android:layout_marginTop="41dp"
        android:layout_marginEnd="37dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout12">

        <TextView
            android:id="@+id/textView_contrasena"
            android:layout_width="126dp"
            android:layout_height="49dp"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/contrasena"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/contrasena"
            android:layout_width="224dp"
            android:layout_height="59dp"
            android:autofillHints=""
            android:ems="10"
            android:fontFamily="sans-serif-condensed-medium"
            android:hint="@string/contrasena_usario"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textColorHint="#1976D2"
            android:textSize="20sp" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_contrasena"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="180dp"
        android:layout_height="59dp"
        android:layout_marginTop="59dp"
        android:layout_marginEnd="35dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:onClick="Olvidocontrasena"
        android:text="@string/contrasena_olv"
        android:textColor="#6FC7FA"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout11"
        app:strokeColor="#6FC7FA"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>